# gianged-attendance

./: .gitattributes  .gitignore  CHANGELOG.md  CLAUDE.md  Cargo.toml  README.md  build.rs  config.example.toml  database.sql  release-please-config.json  rustfmt.toml
.claude/: CLAUDE.md
.github/workflows/: ci.yml  release.yml  update-lockfile.yml
docs/: overview.md  zk-tcp-protocol.md
docs/tasks/: fix.md  phase-01-project-init.md  phase-02-database-schema.md  phase-03-data-migration.md  phase-04-error-types.md  phase-05-configuration.md  phase-06-models.md  phase-07-db-pool.md  phase-08-db-department.md  phase-09-db-employee.md  phase-10-db-attendance.md  phase-11-zkteco-client.md  phase-12-sync-service.md  phase-13-excel-export.md  phase-14-gui-app-state.md  phase-15-gui-main-window.md  phase-16-gui-dashboard.md  phase-17-gui-departments.md  phase-18-gui-employees.md  phase-19-gui-sync.md  phase-20-gui-reports.md  phase-21-gui-settings.md  phase-22-build-package.md  phase-23-ci-cd.md  zk-rust-port.md
examples/: test_tcp.rs
installer/: setup.iss
src/: client.rs  config.rs  error.rs  export.rs  lib.rs  main.rs  models.rs  sync.rs  zk.rs  zk_tcp_client.rs
src/db/: attendance.rs  connection.rs  department.rs  employee.rs  mod.rs
src/entities/: attendance_logs.rs  departments.rs  employees.rs  mod.rs  prelude.rs
src/models/: attendance.rs  department.rs  employee.rs  mod.rs
src/ui/: app.rs  components.rs  dashboard.rs  department_panel.rs  main_app.rs  mod.rs  reports_panel.rs  settings_panel.rs  setup_wizard.rs  staff_panel.rs  sync_panel.rs
src/zk/: attendance.rs  client.rs  error.rs  mod.rs  protocol.rs
src/zk_tcp/: client.rs  io.rs  mod.rs  parser.rs  protocol.rs  tests.rs  transfer.rs  types.rs
