[package]
name = "gianged-attendance"
version = "1.3.0"
edition = "2024"
description = "Mini ERP desktop app for staff and attendance management"
authors = ["Gianged"]

[dependencies]
# Async runtime (rustls, no OpenSSL)
tokio = { version = "1.48.0", features = ["full", "rt-multi-thread"] }

# Database (ORM - database-first approach)
sea-orm = { version = "1.1.19", features = [
    "sqlx-postgres",
    "runtime-tokio-rustls",
    "macros",
    "with-chrono",
    "with-uuid"
]}

# HTTP client
reqwest = { version = "0.12.28", default-features = false, features = [
    "rustls-tls",
    "cookies",
    "json"
]}

# Serialization
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.147"
toml = "0.9.8"

# Date/time
chrono = { version = "0.4.42", features = ["serde"] }

# Error handling
thiserror = "2.0.17"
anyhow = "1.0.100"

# Logging
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.22", features = ["env-filter"] }
tracing-appender = "0.2.4"

# GUI
eframe = "0.33.3"
egui_extras = { version = "0.33.3", features = ["datepicker"] }
egui-phosphor = { version = "0.11.0", features = ["regular"] }

# Excel export
rust_xlsxwriter = "0.92.2"

# File dialogs
rfd = "0.16.0"

# Config
directories = "6.0.0"

# CLI argument parsing
clap = { version = "4.5.53", features = ["derive"] }

[build-dependencies]
winres = "0.1.12"

# MSI installer configuration (cargo-wix)
[package.metadata.wix]
upgrade-guid = "F7B3D5A1-8E2C-4F6A-9D1B-3C5E7F9A2B4D"
path-guid = "A1B2C3D4-5E6F-7A8B-9C0D-1E2F3A4B5C6D"
license = false
eula = false

# Release build optimizations
[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
